task.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-depl
  labels:
    app: task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task
  template:
    metadata:
      labels:
        app: task
    spec:
      containers:
      - name: task-con
        image: ahmadg/welcome-task
        ports:
        - containerPort: 5000
  
---
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  selector:
    app: task 
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 5000
