ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task
spec:
  rules:
  - host: app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
             service:
                 name: task-service
                 port:
                  number: 8081
